--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@
 <script type='text/javascript' id='susi-bot-script' data-userid='bc98602e267914bbd8662355e65121f6' data-group='Communication' data-language='en' data-skill='MIdoriya' src='https://skills.susi.ai/susi-chatbot.js'></script>
 </p>
 </body>
+</html>
